Updated doc to new label style

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -149,7 +149,7 @@ the default label is the filename, so:
 matrix2latex(m, 'niceTable', rowLabels=rl, 
                  caption='Nice table!')
 \end{sageblock}
-can be referenced by \verb!\ref{niceTable}!. Table \ref{niceTable}
+can be referenced by \verb!\ref{tab:niceTable}!. Table \ref{tab:niceTable}
 was included in latex by \verb!\input{niceTable}!.
 \input{niceTable}
 
