Documentation update. Docstring in matrix2latex.py updated TODO: auto between docstring and doc.tex Real world example added to doc.pdf, comparing factorial functions

--- a/doc/tex/texPreamble.tex
+++ b/doc/tex/texPreamble.tex
@@ -22,7 +22,7 @@
 \usepackage{color}              % Color, must be on if inkscape figures are used
 
 \usepackage{listings}           % include code
-\lstset{language = python,
+\lstset{language = tex,
   showspaces = false,
   showtabs = false,
   showstringspaces = false,
