Documentation update. Added some missing files. Updated font for lstlisting, still not satisfied.

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -70,7 +70,7 @@ note that numpy is required though this may change in the near future
   t = matrix2latex(m)
   print t
 \end{sageblock}
-\begin{lstlisting}
+\begin{lstlisting}[language=tex, morekeywords={begin}]
   \begin{table}[ht]
     \begin{center}
       \begin{tabular}{cc}
@@ -213,7 +213,7 @@ different values of $n$. The result is shown in table \ref{tab:facV}.
 What we really wanted to do was to
 compare the speed of the different implementations. To do this
 we use the python package timeit, the rest of the code is mostly unchanged.
-\lstinputlisting[firstline=45]{factorial.py}
+\lstinputlisting[firstline=46]{factorial.py}
 \input{facT}
 %TODO: add simple real world example.
 % \begin{table}[ht]
