--- a/doc/tex/texPreamble.tex
+++ b/doc/tex/texPreamble.tex
@@ -21,8 +21,13 @@
 \usepackage{booktabs}           % Fancy tables
 \usepackage{color}              % Color, must be on if inkscape figures are used
 
+%\usepackage{beramono}
 \usepackage{listings}           % include code
-\lstset{language = tex,
+\lstset{language = python,
+  basicstyle= \small\sffamily,
+  stringstyle=\ttfamily,
+  commentstyle=\textit,
+  tabsize=2,
   showspaces = false,
   showtabs = false,
   showstringspaces = false,
