latex output of previous change

--- a/doc/niceTable.tex
+++ b/doc/niceTable.tex
@@ -2,13 +2,12 @@
 	\begin{center}
 	\caption{Nice table!}
 	\label{tab:niceTable}
-		\begin{tabular}{cc}
+		\begin{tabular}{ccc}
 		\toprule
 			$x$ & $x^2$\\
 			\midrule
-			$1$ & $1$\\
-			$2$ & $4$\\
-			$3$ & $9$\\
+			$1$ & $2$ & $3$\\
+			$1$ & $4$ & $9$\\
 		\bottomrule
 		\end{tabular}
 	\end{center}
