--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -15,8 +15,6 @@ foundation. For further reading see:
 \section{TODO}
 \begin{itemize}
 \item Provide installation.
-\item Remove dependency on numpy (might be more portable to other systems)
-and will allow for more flexible input (for instance non-rectangular).
 \item Complete test suite.
 \item Improve error handling by fixing errors instead of crashing.
 \item Clean the preamble for this documentation.
@@ -24,12 +22,7 @@ and will allow for more flexible input (for instance non-rectangular).
 \end{itemize}
 
 \section{Compatibility}
-\begin{sagesilent}
-import sys
-sys.path.append('../')
-from test_compatibility import compatibleTable
-\end{sagesilent}
-\sage{compatibleTable}
+\input{compatibleTable}
 
 \section{Installation}
 The following packages and definitions are recommended in the latex preamble 
@@ -42,14 +35,12 @@ The following packages and definitions are recommended in the latex preamble
 \begin{document}
 ...
 \end{verbatim}
-To use the code make sure all python files are in your \verb!PYTHONPATH!,
-note that numpy is required though this may change in the near future 
-(and even sooner by request).
+To use the code make sure all python files are in your \verb!PYTHONPATH!.
 
 \section{Arguments}
   
 \subsection{matrix}
-  A numpy matrix or a nested list
+  A numpy matrix or a (nested) list. TODO: how abstract input can this thing actually handle?
 
 \subsection{Filename}
   File to place output, extension .tex is added automatically. File can be included in a LaTeX
@@ -74,22 +65,21 @@ note that numpy is required though this may change in the near future
 \subsubsection{Example}
 \begin{sageblock}
   from matrix2latex import matrix2latex
-  m = [[1, 2, 3], [1, 4, 9]] # python nested list
+  m = [[1, 1], [2, 4], [3, 9]] # python nested list
   t = matrix2latex(m)
   print t
 \end{sageblock}
 \begin{lstlisting}[language=tex, morekeywords={begin}]
-  \begin{table}[ht]
-    \begin{center}
-      \begin{tabular}{cc}
-        \toprule
-        $1$ & $1$\\
-        $2$ & $4$\\
-        $3$ & $9$\\
-        \bottomrule
-      \end{tabular}
-    \end{center}
-  \end{table}
+\begin{center}
+  \begin{tabular}{cc}
+    \toprule
+    $1$ & $1$\\
+    $2$ & $4$\\
+    $3$ & $9$\\
+    \bottomrule
+  \end{tabular}
+\end{center}
+\end{table}
 \end{lstlisting}
 \sage{t}
 
@@ -97,7 +87,6 @@ note that numpy is required though this may change in the near future
 \subsubsection{rowLabels}
     A row at the top used to label the columns.
     Must be a list of strings.
-
 Using the same example from above we can add row labels
 \begin{sageblock}
 rl = ['$x$', '$x^2$']
@@ -108,15 +97,14 @@ t = matrix2latex(m, rowLabels=rl)
 \subsubsection{columnLabels}
     A column used to label the rows.
     Must be a list of strings
-
 \subsubsection{transpose}
 Flips the table around in case you messed up. Equivalent to
 matrix2latex(m.H, ...)
 if m is a numpy matrix.
-Note the use of columnLabels in the example.
+Note that \lstinline{rowLabels} is used in the example.
 \begin{sageblock}
-cl = ['$x$', '$x^2$']
-t = matrix2latex(m, columnLabels=cl, transpose=True)
+t = matrix2latex(m, columnLabels=rl, transpose=True)
+print t
 \end{sageblock}
 \sage{t}
 
@@ -125,7 +113,7 @@ t = matrix2latex(m, columnLabels=cl, transpose=True)
     Inserts \verb!\caption! after \verb!\end{tabular}!.
 Always use informative captions!
 \begin{sageblock}
-t = matrix2latex(m, rowLabels=rl, 
+t = matrix2latex(m, rowLabels=rl,
                  caption='Nice table!')
 \end{sageblock}
 \sage{t}
@@ -147,23 +135,55 @@ was included in latex by \verb!\input{niceTable}!.
 \subsubsection{format}
 Printf syntax format, e.g. \lstinline{$%.2f$}. Default is \lstinline{$%g$}.
   This format is then used for all the elements in the table.
+Using numpy creating tables for common mathematical expressions are easy:
 \begin{sageblock}
-m = [[1, 2, 3], [1, 1/2, 1/3]]
+import numpy as np
+m = np.zeros((3, 2))
+m[:, 0] = np.arange(1, 3+1)
+m[:, 1] = 1./m[:, 0]
+
 rl = ['$x$', '$1/x$']
 t = matrix2latex(m, rowLabels=rl,
                  format='%.2f')
 \end{sageblock}
 \sage{t}
-  
+
 \subsubsection{formatColumn}
-A list of printf-syntax formats, e.g. \lstinline{[$%.2f$, $%g$]}
+A list of printf-syntax formats, e.g. \lstinline{['$%.2f$', '$%g$']}
 Must be of same length as the number of columns.
 Format i is then used for column i.
 This is useful if some of your data should be printed with more significant figures
-than other parts
+than other parts, for instance in the example above $x$ are integers and using
+$d$ is more appropriate.
 \begin{sageblock}
-t = matrix2latex(m, rowLabels=rl,
-                 formatColumn=['%g', '%.2f'])
+fc = ['$%d$', '$%.2f$']
+t = matrix2latex(m, rowLabels=rl, formatColumn=fc)
+\end{sageblock}
+\sage{t}
+
+You could use the format option to add units to you numbers, so for instance
+visualizing ohms law
+\begin{sageblock}
+m2 = np.zeros((3, 2))
+R = 50. # ohm
+m2[:, 0] = np.arange(1, 3+1)
+m2[:, 1] = m[:, 0]/R
+c = 'Current through $%g \Omega$ resistor' % R
+rl = ['$V$', '$I=V/R$']
+t = matrix2latex(m2, rowLabels=rl,
+                 formatColumn=['$%d V$', '$%.2f A$'],
+                 caption=c)
+\end{sageblock}
+\sage{t}
+
+This is however not the recommend way to give units, since they should
+be given in the rowLabel
+\begin{sageblock}
+rl = ['$V$ [V]', '$I=V/R$ [A]']
+t = matrix2latex(m2, rowLabels=rl,
+                 formatColumn=['$%d$', '$%.2f$'],
+                 caption=c)
+print t
 \end{sageblock}
 \sage{t}
 
@@ -177,8 +197,7 @@ it will produce the correct amount depending on the number of columns.
 Default is ``c'', if you use \lstinline{columnLabels} it will always use
 ``r'' as the alignment for that column.
 \begin{sageblock}
-m = [[1, 1/2, 1/3], [1, 1/2, 1/3]]
-t = matrix2latex(m, alignment='rc')
+t = matrix2latex(m, alignment='rl')
 \end{sageblock}
 \sage{t}
 
@@ -190,6 +209,9 @@ you could simply use
 t = matrix2latex(m, alignment='|r||c|')
 \end{sageblock}
 \sage{t}
+
+There is some error checking on the alignment but not much, it simply counts the number
+of c, l and r in the alignment. All other characters are ignored.
 
 \subsubsection{General considerations}
 Note that many of these options only has an effect when typesetting a table,
@@ -205,7 +227,7 @@ t2 = matrix2latex(m, None, "align*", "pmatrix")
 assert t1 == t2
 \end{sageblock}
 \sage{t1}
-The scary thing is that \lstinline{rowLabels} actually works when creating a matrix,
+The scary thing is that \lstinline{columnLabels} actually works when creating a matrix,
 it just looks a bit wierd.
 
 The options presented by this program represents what I need when creating a table,
@@ -255,17 +277,7 @@ compare the speed of the different implementations. To do this
 we use the python package timeit, the rest of the code is mostly unchanged.
 \lstinputlisting[firstline=46]{factorial.py}
 \input{facT}
-%TODO: add simple real world example.
-% \begin{table}[ht]
-%   \begin{center}
-%     \begin{tabular}{lcr}
-%       $1.00$ & $2.00$ & $4.00$\\
-%       $3.00$ & $4.00$ & $6.00$\\
-%     \end{tabular}
-%   \end{center}
-% \end{table}
-
 
 %\bibliographystyle{IEEEtran}
 %\bibliography{doc}
-\end{document}
+ \end{document}
