--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -44,7 +44,8 @@ To use the code make sure all python files are in your \verb!PYTHONPATH!.
 
 \subsection{Filename}
   File to place output, extension .tex is added automatically. File can be included in a LaTeX
-  document by \verb!\input{filename}!. If filename is None or not a string, output will be returned in a string
+  document by \verb!\input{filename}!. Output will always be returned in a string. If filename is None
+  or not a string it is ignored.
   
 \subsection{*environments}
   Use 
@@ -170,22 +171,21 @@ m2[:, 0] = np.arange(1, 3+1)
 m2[:, 1] = m[:, 0]/R
 c = 'Current through $%g \Omega$ resistor' % R
 rl = ['$V$', '$I=V/R$']
-t = matrix2latex(m2, rowLabels=rl,
+t = matrix2latex(m2, 'table_ohm', rowLabels=rl,
                  formatColumn=['$%d V$', '$%.2f A$'],
                  caption=c)
 \end{sageblock}
-\sage{t}
+\input{table_ohm}
 
 This is however not the recommend way to give units, since they should
 be given in the rowLabel
 \begin{sageblock}
 rl = ['$V$ [V]', '$I=V/R$ [A]']
-t = matrix2latex(m2, rowLabels=rl,
+t = matrix2latex(m2, 'table_ohm2', rowLabels=rl,
                  formatColumn=['$%d$', '$%.2f$'],
                  caption=c)
-print t
 \end{sageblock}
-\sage{t}
+\input{table_ohm2}
 
 \subsubsection{alignment}
 Used as an option when tabular is given as enviroment.
