Updated doc with install instructions (same as in readme)

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -35,7 +35,12 @@ The following packages and definitions are recommended in the latex preamble
 \begin{document}
 ...
 \end{verbatim}
-To use the code make sure all python files are in your \verb!PYTHONPATH!.
+To use the code place the folder matrix2latex/ in our \verb!PYTHONPATH!.
+Your current working directory is always on your \verb!PYTHONPATH!.
+
+Hint: on unix systems do: \\
+\verb!echo $PYTHONPATH! \\
+to see a list of locations. Windows users: ask google about \verb!PYTHONPATH!.
 
 \section{Arguments}
   
