Tested with pypy-c, since pypy implements part of numpy but not numpy.matrix the testsuit had to be adjusted.

--- a/doc/compatibleTable.tex
+++ b/doc/compatibleTable.tex
@@ -10,6 +10,7 @@
 			python2.6 & True\\
 			python2.7 & True\\
 			python3.2 & True\\
+			pypy-c & True\\
 		\bottomrule
 		\end{tabular}
 	\end{center}
