--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -22,6 +22,10 @@ foundation. For further reading see:
 \end{itemize}
 
 \section{Compatibility}
+Table \ref{tab:compatibleTable} reflects the python versions currently installed
+on my system\footnote{Mac OS X 10.6, python installed trough macport.}
+and if the testsuit for matrix2latex passes. If you find a python version where
+it doesn't work let me know.
 \input{compatibleTable}
 
 \section{Installation}
@@ -40,7 +44,8 @@ Your current working directory is always on your \verb!PYTHONPATH!.
 
 Hint: on unix systems do: \\
 \verb!echo $PYTHONPATH! \\
-to see a list of locations. Windows users: ask google about \verb!PYTHONPATH!.
+to see a list of locations. Other users: ask google about \verb!PYTHONPATH!
+on your operation system.
 
 \section{Arguments}
   
