Minor documentation fixes.

--- a/doc/compatibleTable.tex
+++ b/doc/compatibleTable.tex
@@ -1,5 +1,6 @@
 \begin{table}[ht]
 	\begin{center}
+	\caption{Does 'python test.py' return 0?}
 	\label{tab:compatibleTable}
 		\begin{tabular}{rc}
 		\toprule
