minor doc fix (typo)

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -45,7 +45,7 @@ Your current working directory is always on your \verb!PYTHONPATH!.
 Hint: on unix systems do: \\
 \verb!echo $PYTHONPATH! \\
 to see a list of locations. Other users: ask google about \verb!PYTHONPATH!
-on your operation system.
+for your operation system.
 
 \section{Arguments}
   
