--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -136,26 +136,26 @@ t = matrix2latex(m, '', 'format', '%s');
 \sage{t}
 
 \subsection{**keywords}
-\subsubsection{rowLabels}
+\subsubsection{headerRow}
     A row at the top used to label the columns.
     Must be a list of strings.
 Using the same example from above we can add row labels
 \begin{sageblock}
 rl = ['$x$', '$x^2$']
-t = matrix2latex(m, rowLabels=rl)
+t = matrix2latex(m, headerRow=rl)
 \end{sageblock}
 \sage{t}
 
-\subsubsection{columnLabels}
+\subsubsection{headerColumn}
     A column used to label the rows.
     Must be a list of strings
 \subsubsection{transpose}
 Flips the table around in case you messed up. Equivalent to
 matrix2latex(m.H, ...)
 if m is a numpy matrix.
-Note that \lstinline{rowLabels} is used in the example.
+Note that \lstinline{headerRow} is used in the example.
 \begin{sageblock}
-t = matrix2latex(m, columnLabels=rl, transpose=True)
+t = matrix2latex(m, headerColumn=rl, transpose=True)
 print t
 \end{sageblock}
 \sage{t}
@@ -165,7 +165,7 @@ print t
     Inserts \verb!\caption! after \verb!\end{tabular}!.
 Always use informative captions!
 \begin{sageblock}
-t = matrix2latex(m, rowLabels=rl,
+t = matrix2latex(m, headerRow=rl,
                  caption='Nice table!')
 \end{sageblock}
 \sage{t}
@@ -177,7 +177,7 @@ Default is filename without extension.
 We can use \lstinline{label='niceTable'} but if we save it to file
 the default label is the filename, so:
 \begin{sageblock}
-matrix2latex(m, 'niceTable', rowLabels=rl, 
+matrix2latex(m, 'niceTable', headerRow=rl, 
                  caption='Nice table!')
 \end{sageblock}
 can be referenced by \verb!\ref{tab:niceTable}!. Table \ref{tab:niceTable}
@@ -195,7 +195,7 @@ m[:, 0] = np.arange(1, 3+1)
 m[:, 1] = 1./m[:, 0]
 
 rl = ['$x$', '$1/x$']
-t = matrix2latex(m, rowLabels=rl,
+t = matrix2latex(m, headerRow=rl,
                  format='%.2f')
 \end{sageblock}
 \sage{t}
@@ -209,7 +209,7 @@ than other parts, for instance in the example above $x$ are integers and using
 $d$ is more appropriate.
 \begin{sageblock}
 fc = ['$%d$', '$%.2f$']
-t = matrix2latex(m, rowLabels=rl, formatColumn=fc)
+t = matrix2latex(m, headerRow=rl, formatColumn=fc)
 \end{sageblock}
 \sage{t}
 
@@ -222,7 +222,7 @@ m2[:, 0] = np.arange(1, 3+1)
 m2[:, 1] = m[:, 0]/R
 c = 'Current through $%g \Omega$ resistor' % R
 rl = ['$V$', '$I=V/R$']
-t = matrix2latex(m2, 'table_ohm', rowLabels=rl,
+t = matrix2latex(m2, 'table_ohm', headerRow=rl,
                  formatColumn=['$%d V$', '$%.2f A$'],
                  caption=c)
 \end{sageblock}
@@ -232,7 +232,7 @@ This is however not the recommend way to give units, since they should
 be given in the rowLabel
 \begin{sageblock}
 rl = ['$V$ [V]', '$I=V/R$ [A]']
-t = matrix2latex(m2, 'table_ohm2', rowLabels=rl,
+t = matrix2latex(m2, 'table_ohm2', headerRow=rl,
                  formatColumn=['$%d$', '$%.2f$'],
                  caption=c)
 \end{sageblock}
@@ -245,7 +245,7 @@ A latex alignment like c, l or r.
 Can be given either as one per column e.g. ``ccc''.
 Or if only a single character is given e.g. ``c'',
 it will produce the correct amount depending on the number of columns.
-Default is ``c'', if you use \lstinline{columnLabels} it will always use
+Default is ``c'', if you use \lstinline{headerColumn} it will always use
 ``r'' as the alignment for that column.
 \begin{sageblock}
 t = matrix2latex(m, alignment='rl')
@@ -278,7 +278,7 @@ t2 = matrix2latex(m, None, "align*", "pmatrix")
 assert t1 == t2
 \end{sageblock}
 \sage{t1}
-The scary thing is that \lstinline{columnLabels} actually works when creating a matrix,
+The scary thing is that \lstinline{headerColumn} actually works when creating a matrix,
 it just looks a bit wierd.
 
 The options presented by this program represents what I need when creating a table,
