--- a/doc/tex/texPreamble.tex
+++ b/doc/tex/texPreamble.tex
@@ -39,7 +39,7 @@
 %\usepackage{beramono}
 \usepackage{listings}           % include code
 \lstset{language = python,
-  basicstyle= \small\sffamily,
+  basicstyle= \small\bfseries,
   stringstyle=\ttfamily,
   commentstyle=\textit,
   tabsize=2,
