Empty matrix now works propperly for both matlab and python

--- a/test.tex
+++ b/test.tex
@@ -166,3 +166,12 @@
     \end{tabular}
   \end{center}
 \end{table}
+%%%empty
+\begin{table}[ht]
+  \begin{center}
+    \begin{tabular}{c}
+      \toprule
+      \bottomrule
+    \end{tabular}
+  \end{center}
+\end{table}
