--- a/test/test.tex
+++ b/test/test.tex
@@ -1,5 +1,5 @@
 %%%simple
-\begin{table}[ht]
+\begin{table}[htp]
   \begin{center}
     \begin{tabular}{ccc}
       \toprule
@@ -10,7 +10,7 @@
   \end{center}
 \end{table}
 %%%transpose1
-\begin{table}[ht]
+\begin{table}[htp]
   \begin{center}
     \begin{tabular}{cc}
       \toprule
@@ -22,7 +22,7 @@
   \end{center}
 \end{table}
 %%%transpose2
-\begin{table}[ht]
+\begin{table}[htp]
   \begin{center}
     \begin{tabular}{cc}
       \toprule
@@ -36,7 +36,7 @@
   \end{center}
 \end{table}
 %%%file
-\begin{table}[ht]
+\begin{table}[htp]
   \begin{center}
     \label{tab:tmp}
     \begin{tabular}{ccc}
@@ -48,7 +48,7 @@
   \end{center}
 \end{table}
 %%%environment1
-\begin{table}[ht]
+\begin{table}[htp]
   \begin{center}
     \begin{tabular}{ccc}
       \toprule
@@ -66,7 +66,7 @@
   \end{bar}
 \end{foo}
 %%%labels1
-\begin{table}[ht]
+\begin{table}[htp]
   \begin{center}
     \begin{tabular}{rccc}
       \toprule
@@ -79,7 +79,7 @@
   \end{center}
 \end{table}
 %%%labels2
-\begin{table}[ht]
+\begin{table}[htp]
   \begin{center}
     \begin{tabular}{rccc}
       \toprule
@@ -92,7 +92,7 @@
   \end{center}
 \end{table}
 %%%labels3
-\begin{table}[ht]
+\begin{table}[htp]
   \begin{center}
     \begin{tabular}{rccc}
       \toprule
@@ -105,7 +105,7 @@
   \end{center}
 \end{table}
 %%%labels4
-\begin{table}[ht]
+\begin{table}[htp]
   \begin{center}
     \caption{Hello}
     \label{tab:la}
@@ -132,7 +132,7 @@
   \end{pmatrix}
 \end{align*}
 %%%string
-\begin{table}[ht]
+\begin{table}[htp]
   \begin{center}
     \begin{tabular}{ccc}
       \toprule
@@ -143,7 +143,7 @@
   \end{center}
 \end{table}
 %%%none
-\begin{table}[ht]
+\begin{table}[htp]
   \begin{center}
     \begin{tabular}{ccc}
       \toprule
@@ -155,7 +155,7 @@
   \end{center}
 \end{table}
 %%%infty1
-\begin{table}[ht]
+\begin{table}[htp]
   \begin{center}
     \begin{tabular}{ccc}
       \toprule
@@ -167,7 +167,7 @@
   \end{center}
 \end{table}
 %%%empty
-\begin{table}[ht]
+\begin{table}[htp]
   \begin{center}
     \begin{tabular}{c}
       \toprule
