--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -18,355 +18,26 @@
 
 \begin{document}
 \maketitle
-Takes a python or matlab matrix or nested list and converts to a LaTeX table or matrix.
-Author: ob@cakebox.net, inspired by the work of koehler@in.tum.de who has written
-a similar package for matlab
-\url{http://www.mathworks.com/matlabcentral/fileexchange/4894-matrix2latex}
+This is the documentation for the matrix2latex package, development can be found here:
+\url{http://code.google.com/p/matrix2latex/}
 
-This software is published under the GNU GPL, by the free software
-foundation. For further reading see: 
-\url{http://www.gnu.org/licenses/licenses.html#GPL}
+This package provides easy translation of vector/matrices in python or matlab into latex table/matrix code.
+The implementation is written in both matlab and python, resulting in some discrepancies in features and usage.
+After the introduction we will discuss some
+matlab specific usage in chapter \ref{sec:matlab} before showing
+all options using the python syntax. Currently the python version is the best maintained.
+\chapter{Introduction/features}
+\label{sec:introduction}
+\input{tex/introduction}
 
-\section{TODO}
-\begin{itemize}
-\item Provide installation.
-\item Complete test suite.
-\item Improve error handling by fixing errors instead of crashing.
-\item Clean the preamble for this documentation.
-\item Code is given in all kinds of fonts in this document. Fix!
-\end{itemize}
+\chapter{Matlab specific}
+\label{sec:matlab}
+\input{tex/matlab}
 
-\section{Compatibility}
-\input{../features}
-\subsection{Python}
-Table \ref{tab:compatibleTable} reflects the python versions currently installed
-on my system\footnote{Mac OS X 10.6, python installed trough macport.}
-and if the testsuit for matrix2latex passes. If you find a python version where
-it doesn't work let me know.
-\input{compatibleTable}
-\subsection{Matlab}
-For the moment it is only tested with matlab R2009b.
+\chapter{Usage}
+\label{sec:python}
+\input{tex/python}
 
-\section{Installation}
-The following packages and definitions are recommended in the latex preamble 
-\begin{verbatim}
-% scientific notation, 1\e{9} will print as 1x10^9
-\providecommand{\e}[1]{\ensuremath{\times 10^{#1}}}
-\usepackage{amsmath} % needed for pmatrix
-\usepackage{booktabs} % Fancy tables
-...
-\begin{document}
-...
-\end{verbatim}
-\subsection{Python}
-To use the code place the folder matrix2latex/ in our \verb!PYTHONPATH!.
-Your current working directory is always on your \verb!PYTHONPATH!.
-
-Hint: on unix systems do: \\
-\verb!echo $PYTHONPATH! \\
-to see a list of locations. Other users: ask google about \verb!PYTHONPATH!
-for your operation system.
-
-\subsection{Matlab}
-Place the matlab files in our \verb!MATLABPATH!.
-Your current working directory is always on your \verb!MATLABPATH!.
-
-See the following article from mathworks
-\url{http://www.mathworks.se/help/techdoc/ref/path.html}.
-\section{Usage}
-The python version should be called like this
-\begin{sagesilent}
-from matrix2latex import *
-matrix=[]
-filename=None
-environment = list()
-keywords = dict()
-\end{sagesilent}
-\begin{sageblock}
-matrix2latex(matrix, filename, *environment, **keywords)
-\end{sageblock}
-
-As matlab does not support keywords, something similar to the environment must be used
-\begin{lstlisting}[language=matlab, basicstyle=\small\rmfamily, stringstyle=\mdseries]
-matrix2latex(matrix, filename, varargin)
-\end{lstlisting}
-Note the difference in font used to separate the two languages.
-
-Most of the examples bellow are given in python code only. The matlab version should be identical
-in behavior but has slightly different syntax. Examples:
-\begin{lstlisting}[language=matlab, basicstyle=\small\rmfamily]
-% filename == '' will not write to file. 
-% Filename must always be given
-m = [1, 1; 2, 4; 3, 9];
-t = matrix2latex(m, '');
-% keyword arguments are given like this
-% instead of transpose = True
-t = matrix2latex(m, '', 'transpose', true);
-% environment is a keyword argument
-t = matrix2latex(m, '', 'environment', {'align*', 'pmatrix'});
-% if you want to pass in strings you must use cell array
-m = {'a', 'b', '1'; '1', '2', '3'}
-t = matrix2latex(m, '', 'format', '%s');
-\end{lstlisting}
-  
-\subsection{matrix}
-  Python: A numpy matrix or a (nested) list. TODO: how abstract input can this thing actually handle?
-
-Matlab: Matrix or cell array.
-
-\subsection{Filename}
-  File to place output, extension .tex is added automatically. File can be included in a LaTeX
-  document by \verb!\input{filename}!. Output will always be returned in a string. If filename is None
-  not a string or empty string it is ignored.
-  
-\subsection{*environments}
-  Use 
-\lstinline{matrix2latex(m, None, "align*", "pmatrix", ...)} for matrix.
-  This will give
-  \begin{align*}
-    \begin{pmatrix}
-      1 & 2 \\
-      3 & 4
-    \end{pmatrix}
-  \end{align*}
-  Use 
-\lstinline{matrix2latex(m, "test", "table", "center", "tabular" ...)} for table.
-  Table is default so given no arguments: table, center and tabular will be used.
-  The above command is then equivalent to \\
-\lstinline{matrix2latex(m, "test", ...)}
-
-The above commands looks a bit differently in matlab, since we must specify
-that we want to change the environment.
-\begin{lstlisting}[language=matlab, basicstyle=\small\rmfamily, stringstyle=\mdseries]
-matrix2latex(m, None, 'environment', {'align*', 'pmatrix'}, ...)
-matrix2latex(m, 'test', 'environment', {'table', 'center', 'tabular'} ...)
-matrix2latex(m, 'test', ...)
-\end{lstlisting}
-
-\subsubsection{Example}
-\begin{sageblock}
-  from matrix2latex import matrix2latex
-  m = [[1, 1], [2, 4], [3, 9]] # python nested list
-  t = matrix2latex(m)
-  print t
-\end{sageblock}
-\begin{lstlisting}[language=tex, morekeywords={begin}]
-\begin{center}
-  \begin{tabular}{cc}
-    \toprule
-    $1$ & $1$\\
-    $2$ & $4$\\
-    $3$ & $9$\\
-    \bottomrule
-  \end{tabular}
-\end{center}
-\end{table}
-\end{lstlisting}
-\sage{t}
-
-\subsection{**keywords}
-\subsubsection{headerRow}
-A row at the top used to label the columns.
-Must be a list of strings.
-Using the same example from above we can add row labels
-\begin{sageblock}
-hr = ['$x$', '$x^2$']
-t = matrix2latex(m, headerRow=hr)
-\end{sageblock}
-
-Which in matlab looks like this (note that cell array must be used for
-declaring the header row)
-\begin{lstlisting}[language=matlab, basicstyle=\small\rmfamily, stringstyle=\mdseries]
-hr = {'$x$', '$x^2$'};
-t = matrix2latex(m, 'headerRow', hr);
-\end{lstlisting}
-\sage{t}
-
-\subsubsection{headerColumn}
-    A column used to label the rows.
-    Must be a list of strings
-\subsubsection{transpose}
-Flips the table around in case you messed up. Equivalent to
-matrix2latex(m.H, ...)
-if m is a numpy matrix.
-Note that \lstinline{headerColumn} is used in the example.
-\begin{sageblock}
-t = matrix2latex(m, headerColumn=rl, transpose=True)
-\end{sageblock}
-\sage{t}
-
-\subsubsection{caption}
-    Use to define a caption for your table.
-    Inserts \verb!\caption! after \verb!\end{tabular}!.
-Always use informative captions!
-\begin{sageblock}
-t = matrix2latex(m, headerRow=rl,
-                 caption='Nice table!')
-\end{sageblock}
-\sage{t}
-
-\subsubsection{label}
-Used to insert \verb!\label{tab:...}! after \verb!\end{tabular}!
-Default is filename without extension.
-
-We can use \lstinline{label='niceTable'} but if we save it to file
-the default label is the filename, so:
-\begin{sageblock}
-matrix2latex(m, 'niceTable', headerRow=rl, 
-                 caption='Nice table!')
-\end{sageblock}
-can be referenced by \verb!\ref{tab:niceTable}!. Table \ref{tab:niceTable}
-was included in latex by \verb!\input{niceTable}!.
-\input{niceTable}
-
-\subsubsection{format}
-Printf syntax format, e.g. \lstinline{$%.2f$}. Default is \lstinline{$%g$}.
-  This format is then used for all the elements in the table.
-Using numpy creating tables for common mathematical expressions are easy:
-\begin{sageblock}
-import numpy as np
-m = np.zeros((3, 2))
-m[:, 0] = np.arange(1, 3+1)
-m[:, 1] = 1./m[:, 0]
-
-rl = ['$x$', '$1/x$']
-t = matrix2latex(m, headerRow=rl,
-                 format='%.2f')
-\end{sageblock}
-\sage{t}
-
-\subsubsection{formatColumn}
-A list of printf-syntax formats, e.g. \lstinline{['$%.2f$', '$%g$']}
-Must be of same length as the number of columns.
-Format i is then used for column i.
-This is useful if some of your data should be printed with more significant figures
-than other parts, for instance in the example above $x$ are integers and using
-$d$ is more appropriate.
-\begin{sageblock}
-fc = ['$%d$', '$%.2f$']
-t = matrix2latex(m, headerRow=rl, formatColumn=fc)
-\end{sageblock}
-\sage{t}
-
-You could use the format option to add units to you numbers, so for instance
-visualizing ohms law
-\begin{sageblock}
-m2 = np.zeros((3, 2))
-R = 50. # ohm
-m2[:, 0] = np.arange(1, 3+1)
-m2[:, 1] = m[:, 0]/R
-c = 'Current through $%g \Omega$ resistor' % R
-rl = ['$V$', '$I=V/R$']
-t = matrix2latex(m2, 'table_ohm', headerRow=rl,
-                 formatColumn=['$%d V$', '$%.2f A$'],
-                 caption=c)
-\end{sageblock}
-\input{table_ohm}
-
-This is however not the recommend way to give units, since they should
-be given in the header
-\begin{sageblock}
-rl = ['$V$ [V]', '$I=V/R$ [A]']
-t = matrix2latex(m2, 'table_ohm2', headerRow=rl,
-                 formatColumn=['$%d$', '$%.2f$'],
-                 caption=c)
-\end{sageblock}
-\input{table_ohm2}
-
-\subsubsection{alignment}
-Used as an option when tabular is given as enviroment.
-\verb!\begin{tabular}{alignment}!
-A latex alignment like c, l or r.
-Can be given either as one per column e.g. ``ccc''.
-Or if only a single character is given e.g. ``c'',
-it will produce the correct amount depending on the number of columns.
-Default is ``c'', if you use \lstinline{headerColumn} it will always use
-``r'' as the alignment for that column.
-\begin{sageblock}
-t = matrix2latex(m, alignment='rl')
-\end{sageblock}
-\sage{t}
-
-But what if I want vertical rules in my table? Well, this package is built
-on top of booktabs for publication ready tables and the booktabs documentation clearly
-states ``Never, ever use vertical rule''. But as long as you are not publishing your table,
-you could simply use
-\begin{sageblock}
-t = matrix2latex(m, alignment='|r||c|')
-\end{sageblock}
-\sage{t}
-
-There is some error checking on the alignment but not much, it simply counts the number
-of c, l and r in the alignment. All other characters are ignored.
-
-\subsubsection{General considerations}
-Note that many of these options only has an effect when typesetting a table,
-if the correct environment is not given the arguments are simply ignored.
-To give an example of a very useless function call
-\begin{sageblock}
-t1 = matrix2latex(m, None, "align*", "pmatrix",
-                 alignment='rc',
-                 caption='hello world',
-                 label='test')
-# produces the exact same thing as
-t2 = matrix2latex(m, None, "align*", "pmatrix")
-assert t1 == t2
-\end{sageblock}
-\sage{t1}
-The scary thing is that \lstinline{headerColumn} actually works when creating a matrix,
-it just looks a bit wierd.
-
-The options presented by this program represents what I need when creating a table,
-if you need a more sophisticated table you must either change the python code
-(feel free to submit a patch), manually adjust the output afterwards
-or adjust the input (remember that the input can be a nested list of strings).
-\url{http://en.wikibooks.org/wiki/LaTeX/Tables} gives an excellent overview
-of some advanced table techniques.
-
-The booktabs.pdf documentation is an excellent guide to proper table creation,
-matrix2latex does not incorporate all the features of this package (yet).
-%Both caption and label will do nothing if tabular environment is not used.
-% \begin{sagesilent}
-% import sys
-% sys.path.append('../')
-% \end{sagesilent}
-% \begin{sageblock}
-% from matrix2latex import matrix2latex
-% from numpy import matrix
-% m = matrix("1 2 4;3 4 6") # numpy matrix or
-% m = [[1, 2, 4], [3, 4, 6]] # python nested list
-% matrix2latex(m, "test", "table", "center", "tabular", format="$%.2f$", alignment="lcr")
-% # or since table, center and tabular is default:
-% t = matrix2latex(m, format="$%.2f$", alignment="lcr")
-% # produces:
-% \end{sageblock}
-% \sage{t}
-
-\section{Usage examples}
-The usefulness of a programming interface to create \LaTeX{}
-tables becomes apparent when the data is dynamically created by python.
-This can be either because you want flexibility with respect to the tables size
-or because the table content is somehow created by python.
-
-One day you decide to compare different implementations of the
-factorial functions, you start by writing the following file
-as \verb!factorial.py!
-\lstinputlisting[lastline=20]{factorial.py}
-
-The first thing to do is to verify that the three implementations actually give
-the same results, for this we simply loop over the different functions and try for
-different values of $n$. The result is shown in table \ref{tab:facV}.
-\lstinputlisting[firstline=22, lastline=44]{factorial.py}
-\input{facV}
-
-What we really wanted to do was to
-compare the speed of the different implementations. To do this
-we use the python package timeit, the rest of the code is mostly unchanged.
-\lstinputlisting[firstline=46]{factorial.py}
-\input{facT}
-
-As an additional example, see \verb!test_compatibility.py! to see how table \ref{tab:compatibleTable}
-was created.
-%\bibliographystyle{IEEEtran}
-%\bibliography{doc}
+% %\bibliographystyle{IEEEtran}
+% %\bibliography{doc}
  \end{document}
