updated tests to reflect a change so that headers are enclosed in {}, done to improve compatibility with aligned SI tables

--- a/test/test.tex
+++ b/test/test.tex
@@ -26,7 +26,7 @@
   \begin{center}
     \begin{tabular}{cc}
       \toprule
-      a & b\\
+      {a} & {b}\\
       \midrule
       $1$ & $4$\\
       $2$ & $5$\\
@@ -70,10 +70,10 @@
   \begin{center}
     \begin{tabular}{rccc}
       \toprule
-      & c & d & e\\
+      {} & {c} & {d} & {e}\\
       \midrule
-      a & $1$ & $2$ & $3$\\
-      b & $4$ & $5$ & $6$\\
+      {a} & $1$ & $2$ & $3$\\
+      {b} & $4$ & $5$ & $6$\\
       \bottomrule
     \end{tabular}
   \end{center}
@@ -83,10 +83,10 @@
   \begin{center}
     \begin{tabular}{rccc}
       \toprule
-      names & c & d & e\\
+      {names} & {c} & {d} & {e}\\
       \midrule
-      a & $1$ & $2$ & $3$\\
-      b & $4$ & $5$ & $6$\\
+      {a} & $1$ & $2$ & $3$\\
+      {b} & $4$ & $5$ & $6$\\
       \bottomrule
     \end{tabular}
   \end{center}
@@ -96,10 +96,10 @@
   \begin{center}
     \begin{tabular}{rccc}
       \toprule
-      names & c & d & e\\
+      {names} & {c} & {d} & {e}\\
       \midrule
-      a & $1$ & $2$ & $3$\\
-      b & $4$ & $5$ & $6$\\
+      {a} & $1$ & $2$ & $3$\\
+      {b} & $4$ & $5$ & $6$\\
       \bottomrule
     \end{tabular}
   \end{center}
@@ -147,7 +147,7 @@
   \begin{center}
     \begin{tabular}{ccc}
       \toprule
-      $1$ & - & -\\
+      $1$ & {-} & {-}\\
       $2$ & $2$ & $1$\\
       $2$ & $1$ & $2$\\
       \bottomrule
